<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glass Tennis</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Damn it feels good to be a gangsta</string>
    <string name="glass_voice_trigger">Play tennis</string>
    <string name="start_score">0</string>
    <string name="dash">-</string>
    <string name="adDash">\u001F-</string>
    <string name="serving">\u25B2</string>
    <string name="colon">:</string>
    <string name="doublezero">00</string>

</resources>
